// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`basic extend composed with project 1`] = `
TableRep {
  "rowData": [
    {
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "_depth": 0,
    },
    {
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "_depth": 0,
    },
    {
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "_depth": 0,
    },
    {
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "_depth": 0,
    },
    {
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "_depth": 0,
    },
  ],
  "schema": {
    "columnMetadata": {
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
    },
    "columns": [
      "Name",
      "Title",
      "JobFamily",
      "TCOE",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic extend with const col 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic filter 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic groupBy 1`] = `
TableRep {
  "rowData": [
    {
      "JobFamily": "Engineering & Systems Engineering",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
    },
    {
      "JobFamily": "Engineering & Systems Engineering",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
    },
    {
      "JobFamily": "Executive Management",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
    },
    {
      "JobFamily": "Executive Management",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
    },
    {
      "JobFamily": "Executive Management",
      "TCOE": 819582,
      "Title": "General Manager",
    },
    {
      "JobFamily": "Finance & Accounting",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
    },
    {
      "JobFamily": "Legal & Paralegal",
      "TCOE": 321543,
      "Title": "General Counsel",
    },
    {
      "JobFamily": "Legal & Paralegal",
      "TCOE": 445028,
      "Title": "Senior Attorney",
    },
    {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 113775,
      "Title": "Electrician",
    },
    {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 124962,
      "Title": "Structures Inspector",
    },
    {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
    },
    {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
    },
    {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
    },
    {
      "JobFamily": "Police",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
    },
    {
      "JobFamily": "Public Affairs & Marketing",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
    },
    {
      "JobFamily": "Safety",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
    },
    {
      "JobFamily": "Transportation Operations",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
    },
    {
      "JobFamily": "Transportation Operations",
      "TCOE": 352988,
      "Title": "Station Agent",
    },
    {
      "JobFamily": "Transportation Operations",
      "TCOE": 118799,
      "Title": "Train Operator",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "JobFamily",
      "Title",
      "TCOE",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic project operator 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
    },
    {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
    },
    {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
    },
    {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
    },
    {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
    },
    {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic sort 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`chained extend 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
      "_pivot": {
        "columnType": "TEXT",
        "displayName": "_pivot",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_pivot",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`compound key sort 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`getSourceInfo basics 1`] = `
{
  "displayName": ":memory:",
  "id": "",
  "isContainer": true,
  "kind": "Database",
}
`;

exports[`null const extend 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_pivot": null,
    },
    {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_pivot": null,
    },
    {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
      "_pivot": null,
    },
    {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
      "_pivot": null,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_pivot": {
        "columnType": "TEXT",
        "displayName": "_pivot",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_pivot",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`q1 - basic sqlQuery 1`] = `
TableRep {
  "rowData": [
    {
      "num": 42,
    },
  ],
  "schema": {
    "columnMetadata": {
      "num": {
        "columnType": "",
        "displayName": "num",
      },
    },
    "columns": [
      "num",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`t1 - basic sqlite tableQuery 1`] = `
TableRep {
  "rowData": [
    {
      "email": "john@doe.com",
      "firstName": "John",
      "lastName": "Doe",
      "phoneNumber": 123456789,
    },
    {
      "email": "jane@doe.com",
      "firstName": "Jane",
      "lastName": "Doe",
      "phoneNumber": 9876543210,
    },
    {
      "email": "james.bond@mi6.co.uk",
      "firstName": "James",
      "lastName": "Bond",
      "phoneNumber": 612345678,
    },
  ],
  "schema": {
    "columnMetadata": {
      "email": {
        "columnType": "TEXT",
        "displayName": "email",
      },
      "firstName": {
        "columnType": "TEXT",
        "displayName": "firstName",
      },
      "lastName": {
        "columnType": "TEXT",
        "displayName": "lastName",
      },
      "phoneNumber": {
        "columnType": "INTEGER",
        "displayName": "phoneNumber",
      },
    },
    "columns": [
      "firstName",
      "lastName",
      "email",
      "phoneNumber",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`t2 - basic bart table query 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
    },
    {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
    },
    {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
    },
    {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
    },
    {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
    },
    {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
    },
    {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": {
        "columnType": "TEXT",
        "displayName": "JobFamily",
      },
      "Name": {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;
